had to fix height issue with image

--- a/index.html
+++ b/index.html
@@ -26,5 +26,19 @@
             <div class="line"></div>
         </label>
     </nav>
-
+    <!--hero image button and png ufo from free source pngs and added hero text-->
+    <div class="hero-image">
+        <div class="hero-text">
+            <h1 class="title">Cosmic Con</h1>
+            <p>
+                Sci-Fi
+            </p>
+            <button  class="hero-button"> <a href="contact.html" class="hero-link">
+                Contact Us 
+</a>
+            </button>
+        </div>
+    <div class="ufo">
+        <img src="assets/images/ufo.png">
+        </div>
 </body>
