adding footer and social media tabs

--- a/index.html
+++ b/index.html
@@ -41,4 +41,16 @@
     <div class="ufo">
         <img src="assets/images/ufo.png">
         </div>
+<!--add footer and social media elements https://www.youtube.com/watch?v=ETvRZgrcFj8&t=72s-->
+        <footer>
+<div class="wrapper">
+    <div class="icon facebook">
+        <div class="tooltop">Facebook</div>
+        <span><i class ="fab fa-facebook-f"></i></span>
+</div>
+</div>
+
+</ul>
+
+        </footer>
 </body>
