--- a/index.html
+++ b/index.html
@@ -42,15 +42,25 @@
         <img src="assets/images/ufo.png">
         </div>
 <!--add footer and social media elements https://www.youtube.com/watch?v=ETvRZgrcFj8&t=72s-->
-        <footer>
+        
 <div class="wrapper">
     <div class="icon facebook">
-        <div class="tooltop">Facebook</div>
+        <div class="tooltip">Facebook</div>
         <span><i class ="fab fa-facebook-f"></i></span>
 </div>
+<div class="icon twitter">
+    <div class="tooltip">Twitter</div>
+    <span><i class ="fab fa-twitter"></i></span>
+</div>
+<div class="icon instagram">
+    <div class="tooltip">Instagram</div>
+    <span><i class ="fab fa-instagram"></i></span>
+</div>
+<div class="icon youtube">
+    <div class="tooltip">Youtube</div>
+    <span><i class ="fab fa-youtube"></i></span>
+</div>
 </div>
 
-</ul>
-
-        </footer>
+    
 </body>
