add footer to css

--- a/index.html
+++ b/index.html
@@ -45,10 +45,22 @@
         <footer>
 
             <ul class="footer-list">
-                <li class="insta">
+                <li class="facebook">
                     <i class="fab fa-facebook">
                 </li>
-                
+
+                <li class="instagram">
+                    <i class="fab fa-instagram">
+                </li>
+
+                <li class="twitter">
+                    <i class="fab fa-twitter">
+                </li>
+
+                <li class="youtube">
+                    <i class="fab fa-youtube">
+                </li>
+
             </ul>
         </footer>
 </body>
