add css for social icons padding etc

--- a/index.html
+++ b/index.html
@@ -41,26 +41,43 @@
     <div class="ufo">
         <img src="assets/images/ufo.png">
         </div>
-        <!--footer social media-->   
-        <footer>
+        <!--div for social media help from https://codepen.io/vishalamipara/pen/ZEYZVvr-->   
+        
+        <div class="social-icons">
+            <a href="#" title="facebook">
+                <i class="fa fa-facebook-square" aria-hidden="true">
 
-            <ul class="footer-list">
-                <li class="facebook">
-                    <i class="fab fa-facebook">
-                </li>
+                </i>
+            </a>
 
-                <li class="instagram">
-                    <i class="fab fa-instagram">
-                </li>
+            <a href="#" title="twitter">
+                <i class="fa fa-twitter-square" aria-hidden="true">
 
-                <li class="twitter">
-                    <i class="fab fa-twitter">
-                </li>
+                </i>
+            </a>
+            <a href="#" title="instagram">
+                <i class="fa fa-instagram" aria-hidden="true">
 
-                <li class="youtube">
-                    <i class="fab fa-youtube">
-                </li>
+                </i>
+            </a>
 
-            </ul>
-        </footer>
+            <a href="#" title="youtube">
+                <i class="fa fa-youtube-square" aria-hidden="true">
+
+                </i>
+            </a>
+            <a href="#" title="pinterest">
+                <i class="fa fa-pinterest-p" aria-hidden="true">
+
+                </i>
+            </a>
+            <a href="#" title="wikipedia">
+                <i class="fa fa-wikipedia-square" aria-hidden="true">
+
+                </i>
+            </a>
+
+        </div>
+
+            
 </body>
