adding card and container to html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <title>Cosmic Con</title>
 </head>
 <body>
+<div class="container">
 
+    
+</div>
     <nav>
         <input id="nav-toggle" type="checkbox">
         <div class="logo">Cosmic<strong>Con</strong></div>
