add 3 boxes to html under scif

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 </head>
 <body>
 <div class="container">
-
+<div class="box">
+    <img src="/assets/images/horizon-3929969_960_720.jpg"/>
+    <h3>Sci-Fi</h3>
+    <p>All things Science fiction</p>
     
+</div>
+
 </div>
     <nav>
         <input id="nav-toggle" type="checkbox">
