moved code i wrote to lower level below nav

--- a/index.html
+++ b/index.html
@@ -11,15 +11,31 @@
 <title>Cosmic Con</title>
 </head>
 <body>
+    <!--add container box-->
 <div class="container">
 <div class="box">
     <img src="/assets/images/horizon-3929969_960_720.jpg"/>
     <h3>Sci-Fi</h3>
     <p>All things Science fiction</p>
-    
+
+</div>
+<div class="box">
+    <img scr="/assets/images/horizon-3929969_960_720.jpg" />
+    <h3>Sci-Fi</h3>
+    <p>All things Science fiction</p>
+
+</div>
+
+<div class="box">
+    <img scr="/assets/images/horizon-3929969_960_720.jpg" />
+    <h3>Sci-Fi</h3>
+    <p>All things Science fiction</p>
+
 </div>
 
 </div>
+
+<!--nav bar-->
     <nav>
         <input id="nav-toggle" type="checkbox">
         <div class="logo">Cosmic<strong>Con</strong></div>
