--- a/index.html
+++ b/index.html
@@ -71,29 +71,29 @@
            <!--footer social media icons-->
         <footer class="social-icons">
         <div>
-            <a href="#" title="facebook">
+            <a href="https://www.facebook.com/" target="_blank"  title="facebook">
                 <i class="fa fa-facebook-square" aria-hidden="true">
 
                 </i>
             </a>
 
-            <a href="#" title="twitter">
+            <a href="https://www.twitter.com/" target="_blank" title="twitter">
                 <i class="fa fa-twitter-square" aria-hidden="true">
 
                 </i>
             </a>
-            <a href="#" title="instagram">
+            <a href="https://www.instagram.com/" target="_blank" title="instagram">
                 <i class="fa fa-instagram" aria-hidden="true">
 
                 </i>
             </a>
 
-            <a href="#" title="youtube">
+            <a href="https://www.youtube.com/" target="_blank" title="youtube">
                 <i class="fa fa-youtube-square" aria-hidden="true">
 
                 </i>
             </a>
-            <a href="#" title="pinterest">
+            <a href="https://www.pinterest.com/" target="_blank" title="pinterest">
                 <i class="fa fa-pinterest-p" aria-hidden="true">
 
                 </i>
