fixed missing div for hero image

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <div class="ufo">
         <img src="assets/images/ufo.png">
         </div>
+    </div><br>
 
     <!--add container box-->
     <div class="container">
