--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <input id="nav-toggle" type="checkbox">
         <div class="logo">Cosmic<strong>Con</strong></div>
         <ul class="links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About Us</a></li>
-            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/about.html">About Us</a></li>
+            <li><a href="/contact.html">Contact Us</a></li>
         </ul>
         <label for="nav-toggle" class="icon-burger">
             <div class="line"></div>
@@ -105,3 +105,4 @@
 </footer>
             
 </body>
+</html>
