added html for contact page, contact html buttons and info

--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,26 @@
         </label>
     </nav>
 
+<div class="conatiner">
+<h1>Contact US</h1>
+<hr>
+<h2>Cosmic Questions? Open a Portal and ask away</h2>
+<div class="Robot-Helper">
+    <h3>Robot Helper</h3>
+    <p>Our A.I. information-bots are just a beep away</p>
+    <button id="Robo-Helper">Submit a beep</button>
+</div>
+<div class="Curious-minds">
+    <h3>Curious Minds</h3>
+    <p>If your curious about Sci-fy Fantasy and how to launch yourself into the Multiverse drop us a beep</p>
+    <a href="#">
+        <button id="010101">010101</button>
+    </a>
+</div>
+
+
+
+</div>
     
            <!--footer social media icons-->
            <footer class="social-icons">
