added form and styles on css used assistance from W3 Schools and need to add css and h1 element for form

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,47 @@
     </label>
 </nav>
 
+<!--Navbar Ends-->
 
+<div class="container form-container">
+    <div class="row">
+      <div class="col-25">
+        <label for="fname">First Name</label>
+      </div>
+      <div class="col-75">
+        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-25">
+        <label for="lname">Last Name</label>
+      </div>
+      <div class="col-75">
+        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-25">
+        <label for="country">Email Address</label>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-25">
+        <label for="subject">Question</label>
+      </div>
+      <div class="col-75">
+        <textarea id="subject" name="subject" placeholder="Ask us something..." style="height:200px"></textarea>
+      </div>
+    </div>
+    <div class="row">
+      <input type="submit" value="Submit">
+    </div>
+  </form>
+</div>
+
+<!--Contact form starts-->
+
+<!--Contact form Ends-->
        <!--footer social media icons-->
        <footer class="social-icons">
         <div>
