--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,13 @@
 </nav>
 
 <!--Navbar Ends-->
-
+<div>
+<h1 class="form-header">Got a Question?</h1>
+<h2 class="form-header-h2">Fill out below and we will get back to you</h2>
+</div>
+<hr class="form-divider">
+<br>
+<!--Form Starts-->
 <div class="container form-container">
     <div class="row">
       <div class="col-25">
@@ -50,6 +56,9 @@
     <div class="row">
       <div class="col-25">
         <label for="country">Email Address</label>
+      </div>
+      <div class="col-75">
+        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
       </div>
     </div>
     <div class="row">
