added css to form

--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
 <hr class="form-divider">
 <br>
 <!--Form Starts-->
+<form>
 <div class="container form-container">
     <div class="row">
       <div class="col-25">
@@ -74,7 +75,7 @@
     </div>
   </form>
 </div>
-
+</form>
 <!--Contact form starts-->
 
 <!--Contact form Ends-->
