added new button to index for hero image and also chnaged form stles and tried different colors etc

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
                 Sci-Fi
             </p>
             <button  class="hero-button"> <a href="contact.html" class="hero-link">
-                Contact Us 
-</a>
+                Contact Us</a>
+            </button>
+            <button  class="hero-button"> <a href="contact.html" class="hero-link">
+                About Us</a>
             </button>
         </div>
     <div class="ufo">
