updated css paths for each html page as github pages was not rendering css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="scifi scyfy sci-fi science-fiction science fantasy comics marvel space dimensions">
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-<link rel="stylesheet" href="/assets/style.css">
+<link rel="stylesheet" href="./assets/style.css">
 <title>Cosmic Con</title>
 </head>
 <body>
