--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="scifi scyfy sci-fi science-fiction science fantasy comics marvel space dimensions">
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-<link rel="stylesheet" href="./assets/style.css">
+<link rel="stylesheet" href=".//assets/style.css">
 <title>Cosmic Con</title>
 </head>
 <body>
@@ -18,9 +18,9 @@
         <input id="nav-toggle" type="checkbox">
         <div class="logo">Cosmic<strong>Con</strong></div>
         <ul class="links">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/about.html">About Us</a></li>
-            <li><a href="/contact.html">Contact Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <label for="nav-toggle" class="icon-burger">
             <div class="line"></div>
@@ -54,7 +54,7 @@
     <!--add container box-->
     <div class="container">
         <div class="box">
-            <img src="/assets/images/comic-1.jpg"/>
+            <img src="assets/images/comic-1.jpg"/>
             <h3 class="container-headings">Comic Of the Week</h3>
             <p class="container-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis 
                 repellat deserunt fugiat doloremque maiores porro rem earum voluptates reiciendis aspernatur dicta 
@@ -62,7 +62,7 @@
         
         </div>
         <div class="box">
-            <img src="/assets/images/spaceman.jpg"/>
+            <img src="assets/images/spaceman.jpg"/>
             <h3 class="container-headings">Space Time Continuum</h3>
             <p class="container-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis 
                 repellat deserunt fugiat doloremque maiores porro rem earum voluptates reiciendis aspernatur dicta 
@@ -72,7 +72,7 @@
         </div>
         
         <div class="box">
-            <img src="/assets/images/woods-1.jpg"/>
+            <img src="assets/images/woods-1.jpg"/>
             <h3 class="container-headings">Book of the week</h3>
             <p class="container-text">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis 
