updated all css and image links / pathways and is rendering on github pages now next is to add comments to code then validate all code and then start readme file for submission

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="scifi scyfy sci-fi science-fiction science fantasy comics marvel space dimensions">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-<link rel="stylesheet" href="./assets/contact.css">
+<link rel="stylesheet" href=".//assets/contact.css">
 <title>Cosmic Contact</title>
 </head>
 <body>
@@ -17,9 +17,9 @@
     <input id="nav-toggle" type="checkbox">
     <div class="logo">Cosmic<strong>Con</strong></div>
     <ul class="links">
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/about.html">About Us</a></li>
-        <li><a href="/contact.html">Contact Us</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
     </ul>
     <label for="nav-toggle" class="icon-burger">
         <div class="line"></div>
