--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="scifi scyfy sci-fi science-fiction science fantasy comics marvel space dimensions">
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-<link rel="stylesheet" href="./assets/about.css">
+<link rel="stylesheet" href=".//assets/about.css">
 <title>Cosmic Con</title>
 </head>
 <body>
@@ -18,9 +18,9 @@
         <input id="nav-toggle" type="checkbox">
         <div class="logo">Cosmic<strong>Con</strong></div>
         <ul class="links">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/about.html">About Us</a></li>
-            <li><a href="/contact.html">Contact Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <label for="nav-toggle" class="icon-burger">
             <div class="line"></div>
@@ -54,7 +54,7 @@
 				</div>
 			</div>
 			<div class="image-section">
-				<img src="/assets/images/comic-1.jpg">
+				<img src="assets/images/comic-1.jpg">
 			</div>
 		</div>
 	</div>              
