updated all pages with icons to navbar and aslo card section, changed button styles removed some social media icons, added social media to about us section, styled about us section image and text area, added style to nav bar underline also added a media query for nav icon also to be hidden on smaller screens

--- a/contact.html
+++ b/contact.html
@@ -12,14 +12,14 @@
 </head>
 <body>
 
-<!--nav bar-->
+<!--nav bar Starts-->
 <nav>
     <input id="nav-toggle" type="checkbox">
-    <div class="logo">Cosmic<strong>Con</strong></div>
+    <div class="logo">Cosmic<strong>Con</strong> <i class="fa-solid fa-rocket"></i></div>
     <ul class="links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="contact.html" id="active">Contact Us</a></li>
     </ul>
     <label for="nav-toggle" class="icon-burger">
         <div class="line"></div>
@@ -27,15 +27,16 @@
         <div class="line"></div>
     </label>
 </nav>
-
 <!--Navbar Ends-->
+<!--Form heading Starts-->
 <div>
 <h1 class="form-header">Got a Question?</h1>
 <h2 class="form-header-h2">Fill out below and we will get back to you</h2>
 </div>
 <hr class="form-divider">
 <br>
-<!--Form Starts-->
+<!--Form heading Ends-->
+<!--Contact form starts-->
 <form>
 <div class="container form-container">
     <div class="row">
@@ -76,9 +77,8 @@
   </form>
 </div>
 </form>
-<!--Contact form starts-->
-
 <!--Contact form Ends-->
+
        <!--footer social media icons-->
        <footer class="social-icons">
         <div>
@@ -99,21 +99,9 @@
                 </i>
             </a>
 
-            <a href="https://www.youtube.com/" target="_blank" title="youtube">
-                <i class="fa fa-youtube-square" aria-hidden="true">
-
-                </i>
-            </a>
-            <a href="https://www.pinterest.com/" target="_blank" title="pinterest">
-                <i class="fa fa-pinterest-p" aria-hidden="true">
-
-                </i>
-            </a>
-            
-
         </div>
 </footer>
-            
+              <!--footer social media icons Ends-->
 </body>        
     </body>
     </html>
