--- a/about.html
+++ b/about.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://kit.fontawesome.com/e97aa5cb2d.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
 <meta name="description" content="sci fi comics popular science fantasy and more">
 <meta name="keywords" content="scifi scyfy sci-fi science-fiction science fantasy comics marvel space dimensions">
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+<script src="https://kit.fontawesome.com/e97aa5cb2d.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href=".//assets/about.css">
 <title>Cosmic Con</title>
 </head>
@@ -16,10 +16,10 @@
 <!--nav bar-->
     <nav>
         <input id="nav-toggle" type="checkbox">
-        <div class="logo">Cosmic<strong>Con</strong></div>
+        <div class="logo">Cosmic<strong>Con</strong> <i class="fa-solid fa-rocket"></i></div>
         <ul class="links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="about.html" id="active">About Us</a></li>
             <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <label for="nav-toggle" class="icon-burger">
@@ -28,33 +28,37 @@
             <div class="line"></div>
         </label>
     </nav>
-
-    
-
-    <div class="section">
+	<div class="section">
 		<div class="container">
 			<div class="content-section">
 				<div class="title">
-					<h1>About Cosmic Con</h1>
+					<h1 class="about-heading">About Cosmic Con<i class="fa-solid fa-circle-question"></i></h1>
 				</div>
 				<div class="content">
-					<h3>Lorem ipsum dolor sit amet, consectetur adipisicing</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat.</p>
+					<h3>Us at CosmicCon have a passion for Sci-Fi and interstellar activities.</h3> <p>Cosmic is a free service to to community
+						where users sign up via our contact page and recieve updates and information posts on releases, and soon to be
+						released comics, books and interstellar activities. Our Download Content section undergoing maintenance, until then 
+						fill out the contact form and start recieving updates now.  <i class="fa-solid fa-screwdriver-wrench"></i>
+					</p>
 					<div class="button">
 						<a href="">Contact Us</a>
 					</div>
 				</div>
 				<div class="social">
-					<a href="" class="facebook"><i class="fab fa-facebook-f"></i></a>
-					<a href="" class="twitter"><i class="fab fa-twitter"></i></a>
-					<a href="" class="instagram"><i class="fab fa-instagram"></i></a>
+					<a href="https://www.facebook.com/" target="_blank"  title="facebook">
+						<i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+					<a href="https://www.twitter.com/" target="_blank" title="twitter">
+						<i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+					<a href="https://www.instagram.com/" target="_blank" title="instagram">
+						<i class="fa fa-instagram" aria-hidden="true"></i></a>
+					<a href="https://www.youtube.com/" target="_blank" title="youtube">
+						<i class="fa fa-youtube-square" aria-hidden="true"></i></a>
+					<a href="https://www.pinterest.com/" target="_blank" title="pinterest">
+						<i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
 				</div>
 			</div>
 			<div class="image-section">
-				<img src="assets/images/comic-1.jpg">
+				<img src="assets/images/comic-1.jpg" alt="image of comic book">
 			</div>
 		</div>
 	</div>              
