--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 <script src="https://kit.fontawesome.com/e97aa5cb2d.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href=".//assets/about.css">
+<link rel="stylesheet" href=".//assets/Css/about.css">
 <title>Cosmic Con</title>
 </head>
 <body>
