--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="scifi scyfy sci-fi science-fiction science fantasy comics marvel space dimensions">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-<link rel="stylesheet" href=".//assets/contact.css">
+<link rel="stylesheet" href=".//assets/Css/contact.css">
 <title>Cosmic Contact</title>
 </head>
 <body>
