formatted html code and next is the validator checker

--- a/about.html
+++ b/about.html
@@ -1,66 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-<meta name="description" content="sci fi comics popular science fantasy and more">
-<meta name="keywords" content="scifi scyfy sci-fi science-fiction science fantasy comics marvel space dimensions">
-<meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-<script src="https://kit.fontawesome.com/e97aa5cb2d.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href=".//assets/Css/about.css">
-<title>Cosmic Con</title>
-</head>
-<body>
-
-
-<!--nav bar-->
-    <nav>
-        <input id="nav-toggle" type="checkbox">
-        <div class="logo">Cosmic<strong>Con</strong> <i class="fa-solid fa-rocket"></i></div>
-        <ul class="links">
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="description" content="sci fi comics popular science fantasy and more" />
+      <meta name="keywords" content="scifi scyfy sci-fi science-fiction science fantasy comics marvel space dimensions" />
+      <meta name="viewport" content="width=device-width" />
+      <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" />
+      <script src="https://kit.fontawesome.com/e97aa5cb2d.js" crossorigin="anonymous"></script>
+      <link rel="stylesheet" href=".//assets/Css/about.css" />
+      <title>Cosmic Con</title>
+   </head>
+   <body>
+      <!--nav bar-->
+      <nav>
+         <input id="nav-toggle" type="checkbox" />
+         <div class="logo">Cosmic<strong>Con</strong> <i class="fa-solid fa-rocket"></i></div>
+         <ul class="links">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html" id="active">About Us</a></li>
             <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-        <label for="nav-toggle" class="icon-burger">
+         </ul>
+         <label for="nav-toggle" class="icon-burger">
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
-        </label>
-    </nav>
-	<div class="section">
-		<div class="container">
-			<div class="content-section">
-				<div class="title">
-					<h1 class="about-heading">About Cosmic Con<i class="fa-solid fa-circle-question"></i></h1>
-				</div>
-				<div class="content">
-					<h3>Us at CosmicCon have a passion for Sci-Fi and interstellar activities.</h3> <p>Cosmic is a free service to to community
-						where users sign up via our contact page and recieve updates and information posts on releases, and soon to be
-						released comics, books and interstellar activities. Our Download Content section undergoing maintenance, until then 
-						fill out the contact form and start recieving updates now.  <i class="fa-solid fa-screwdriver-wrench"></i>
-					</p>
-					<div class="button">
-						<a href="">Contact Us</a>
-					</div>
-				</div>
-				<div class="social">
-					<a href="https://www.facebook.com/" target="_blank"  title="facebook">
-						<i class="fa fa-facebook-square" aria-hidden="true"></i></a>
-					<a href="https://www.twitter.com/" target="_blank" title="twitter">
-						<i class="fa fa-twitter-square" aria-hidden="true"></i></a>
-					<a href="https://www.instagram.com/" target="_blank" title="instagram">
-						<i class="fa fa-instagram" aria-hidden="true"></i></a>
-					<a href="https://www.youtube.com/" target="_blank" title="youtube">
-						<i class="fa fa-youtube-square" aria-hidden="true"></i></a>
-					<a href="https://www.pinterest.com/" target="_blank" title="pinterest">
-						<i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
-				</div>
-			</div>
-			<div class="image-section">
-				<img src="assets/images/comic-1.jpg" alt="image of comic book">
-			</div>
-		</div>
-	</div>              
-    </body>
-    </html>
+         </label>
+      </nav>
+      <div class="section">
+         <div class="container">
+            <div class="content-section">
+               <div class="title">
+                  <h1 class="about-heading">About Cosmic Con<i class="fa-solid fa-circle-question"></i></h1>
+               </div>
+               <div class="content">
+                  <h3>Us at CosmicCon have a passion for Sci-Fi and interstellar activities.</h3>
+                  <p>
+                     Cosmic is a free service to to community where users sign up via our contact page and recieve updates and information posts on releases, and soon to be released comics, books and interstellar activities. Our Download
+                     Content section undergoing maintenance, until then fill out the contact form and start recieving updates now. <i class="fa-solid fa-screwdriver-wrench"></i>
+                  </p>
+                  <div class="button">
+                     <a href="">Contact Us</a>
+                  </div>
+               </div>
+               <div class="social">
+                  <a href="https://www.facebook.com/" target="_blank" title="facebook"> <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+                  <a href="https://www.twitter.com/" target="_blank" title="twitter"> <i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+                  <a href="https://www.instagram.com/" target="_blank" title="instagram"> <i class="fa fa-instagram" aria-hidden="true"></i></a>
+                  <a href="https://www.youtube.com/" target="_blank" title="youtube"> <i class="fa fa-youtube-square" aria-hidden="true"></i></a>
+                  <a href="https://www.pinterest.com/" target="_blank" title="pinterest"> <i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
+               </div>
+            </div>
+            <div class="image-section">
+               <img src="assets/images/comic-1.jpg" alt="image of comic book" />
+            </div>
+         </div>
+      </div>
+   </body>
+</html>
