updated html and css with formatting and indentation and stlye fixing, added images of validation proof and also removed css and html that was incorrect

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <button class="hero-button"><a href="contact.html" class="hero-link"> About Us</a></button>
          </div>
          <div class="ufo">
-            <img src="assets/images/ufo.png" />
+            <img src="assets/images/ufo.png" alt="ufo disk"/>
          </div>
       </div>
       <br />
@@ -50,7 +50,7 @@
 
       <div class="container">
          <div class="box">
-            <img src="assets/images/comic-1.jpg" />
+            <img src="assets/images/comic-1.jpg" alt="comic image"/>
             <h3 class="container-headings">
                Comic Of the Week <br />
                <i class="fa-solid fa-book-open"></i>
@@ -61,7 +61,7 @@
             </p>
          </div>
          <div class="box">
-            <img src="assets/images/spaceman.jpg" />
+            <img src="assets/images/spaceman.jpg" alt="spaceman"/>
             <h3 class="container-headings">
                Space Time Continuum <br />
                <i class="fa-solid fa-earth-americas"></i>
@@ -73,7 +73,7 @@
          </div>
 
          <div class="box">
-            <img src="assets/images/woods-1.jpg" />
+            <img src="assets/images/woods-1.jpg" alt="woods"/>
             <h3 class="container-headings">
                Book of the week <br />
                <i class="fa-solid fa-book"></i>
